# xPOS-Store

./: .gitignore  CMakeLists.txt  README.md  google-services.json  main.cpp  main.qml  qml.qrc  tips.md  xPOS_Store.pro  xPOS_Store.pro_old  xPos.h
Backend/3rd/: key_emitter.cpp  key_emitter.h
Backend/Classes/: Customer.cpp  Customer.h  Invoice.cpp  Invoice.h  Person.h  Point.cpp  Point.h  Product.cpp  Product.h  SellingRecord.h  Staff.h
Backend/Configs/: invoice_data.xml  sqlitecmdFormat.h  store_data.xml
Backend/Containers/: Customer.h  Database.cpp  Database.h  Invoice.cpp  Invoice.h  Person.h  Point.h  Product.cpp  Product.h  SellingRecord.cpp  Staff.cpp  Staff.h  WorkShift.cpp  WorkShift.h
Backend/Processes/: InventoryProcess.cpp  InventoryProcess.h  WorkShiftProcess.cpp  WorkShiftProcess.h  WorkShitProcess.cpp
Frontend/: ErrorDialog.qml  ErrorDialogForm.ui.qml  Inventory.qml  Invoice.qml  ItemsListView.qml  Payment.qml  Signin.qml
backend/: BackendAnalytics.cpp  BackendAnalytics.h  BackendInventory.cpp  BackendInventory.h  BackendInvoice.cpp  BackendInvoice.h  XPBackend.cpp  XPBackend.h  xPos.cpp  xPos.h
backend/3rd/: key_emitter.cpp
backend/containers/: Bill.cpp  Bill.h  Customer.cpp  Customer.h  Item.h  Payment.cpp  Payment.h  Person.cpp  Person.h  Product.cpp  Product.h  SellingRecord.cpp  SellingRecord.h  Staff.cpp  Staff.h  UpdateRecord.cpp  UpdateRecord.h  WorkShift.cpp  WorkShift.h
backend/database/: Database.cpp  Database.h  InventoryDatabase.cpp  InventoryDatabase.h  SellingDatabase.cpp  SellingDatabase.h  UserDatabase.cpp  UserDatabase.h
frontend/: AdvanceAnalyticsForm.qml  AnalyticsRetailStatus.qml  CalendarForm.qml  CategoryForm.qml  CustomerInfoBoard.qml  DiscountPrgForm.qml  Helper.qml  HistoryListview.qml  InconizedButton.qml  IndicatorCard.qml  InfoCard.qml  InventoryExpiredList.qml  InventoryItemList.qml  InventoryMgmt.qml  InventoryMgmtForm.qml  InventoryOOSList.qml  InventorySlowSellingList.qml  InventoryStatus.qml  InventoryStockBoard.qml  InventoryUpdate.qml  InvoiceComposition.qml  ItemsList.qml  ItemsListView.qml  KPICard.qml  Login.qml  MenuForm.qml  MenuInstance.qml  NotificationPopup.qml  NumPad.qml  Payment.qml  PaymentForm.qml  PriceScreen.qml  ProvidersListview.qml  RealtimeAnalytics.qml  RetailStatusProfit.qml  RetailStatusRevenue.qml  SearchBox.qml  StockUpdateForm.qml  SwitchButton.qml  TimeDurationPicker.qml  (+3 more)
frontend/analytics/: AdvanceAnalyticsForm.qml  AnalyticsRetailStatus.qml  RetailStatusProfit.qml  RetailStatusRevenue.qml  RetailStatusTopN.qml
frontend/gadgets/: CalendarForm.qml  CustomHorizontalBar.qml  InconizedButton.qml  InfoCard.qml  KPICard.qml  MenuForm.qml  MenuInstance.qml  NotificationPopup.qml  NumPad.qml  SearchBox.qml  SwitchButton.qml  TimeDurationPicker.qml
frontend/inventory/: CategoryForm.qml  DiscountPrgForm.qml  InventoryExpiredList.qml  InventoryItemList.qml  InventoryMgmtForm.qml  InventoryOOSList.qml  InventorySlowSellingList.qml  InventoryStatus.qml  InventoryStockBoard.qml  InventoryUpdate.qml  InventoryUpdate.qml.autosave  StockUpdateForm.qml
frontend/invoice/: CustomerInfoBoard.qml  InvoiceComposition.qml  ItemsList.qml  PaymentForm.qml  PriceScreen.qml
resource/dbs/: inventory.db  selling.db  users.db
